--- a/services.html
+++ b/services.html
@@ -63,13 +63,17 @@
     <!--Instruction videos-->
     <section id="instructions">
         <h2>Instruction videos</h2>
-        <div id="oil">
+        <div>
             <h3>Oil Change</h3>
-            <iframe src="https://www.youtube.com/embed/O1hF25Cowv8" title="YouTube video player" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div id="oil">
+                <iframe src="https://www.youtube.com/embed/O1hF25Cowv8" title="YouTube video player" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
         </div>
-        <div id="brakes">
+        <div>
             <h3>Brakes Service</h3>
-            <iframe src="https://www.youtube.com/embed/cKpmBvfVYZg" title="YouTube video player" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div id="brakes">
+                <iframe src="https://www.youtube.com/embed/cKpmBvfVYZg" title="YouTube video player" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
         </div>
     </section>
     
